test: separates util functions and adds tests to them

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "prettier-vue",
   "version": "1.0.8",
   "scripts": {
-    "patch-release": "npm version patch && npm publish && git push --follow-tags"
+    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "test": "jest"
   },
   "bin": {
     "prettier-vue": "./index.js"
