--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "prettier-vue",
-  "version": "1.0.8",
+  "version": "0.0.0-development",
   "scripts": {
     "patch-release": "npm version patch && npm publish && git push --follow-tags",
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "bin": {
     "prettier-vue": "./index.js"
@@ -13,5 +14,12 @@
     "jest": "^21.2.1",
     "minimist": "^1.2.0",
     "prettier": "^1.9.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guilhermelimak/prettier-vue.git"
+  },
+  "devDependencies": {
+    "semantic-release": "^8.2.0"
   }
 }
