--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "prettier-vue",
   "version": "0.0.0-development",
   "scripts": {
-    "patch-release": "npm version patch && npm publish && git push --follow-tags",
     "test": "jest",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "format": "prettier --write './**/*.js'"
   },
   "bin": {
     "prettier-vue": "./index.js"
